<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abi_supported">Supported ABIs</string>
    <string name="about_us">About us</string>
    <string name="accuracy">Accuracy</string>
    <string name="action_back_do">Background update</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change">Change</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_copy">Copy</string>
    <string name="action_jump">Jump</string>
    <string name="action_link">Open Link</string>
    <string name="action_look">View Points</string>
    <string name="action_print">Print</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sub">Submit</string>
    <string name="ad_app_name_apkanaly">App Analyzer</string>
    <string name="ad_app_name_area">Land Area</string>
    <string name="ad_app_name_colour">ColorCaptor</string>
    <string name="ad_app_name_imageBatch">Image Batch</string>
    <string name="ad_app_name_signal">Signal Detector</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_free">Ad–Free</string>
    <string name="ad_free_auto_exchange_success">Redeemed 1hr Ad–Free with 10 Points!</string>
    <string name="ad_free_description">Choose from the options below and enjoy an ad–free experience</string>
    <string name="ad_free_remain_time">Ad–Free Time</string>
    <string name="add_image">Add image</string>
    <string name="add_website">Add website</string>
    <string name="address_cell_info">The base station address information comes from the Internet and is for reference only!</string>
    <string name="address_need_location">To obtain address information, you need to enable positioning permissions</string>
    <string name="address_title">Address</string>
    <string name="admob_banner2">ca-app-pub-8024055951217142/1798938843</string>
    <string name="admob_banner3">ca-app-pub-8024055951217142/6927196349</string>
    <string name="admob_banner4">ca-app-pub-8024055951217142/4356873322</string>
    <string name="admob_banner5">ca-app-pub-8024055951217142/1730709985</string>
    <string name="admob_native1">ca-app-pub-8024055951217142/8127474286</string>
    <string name="admob_native2">ca-app-pub-8024055951217142/2313109396</string>
    <string name="advertising_problem">Ad services</string>
    <string name="after_correction">After correction</string>
    <string name="alias">Alias</string>
    <string name="all_language">Supported languages</string>
    <string name="all_type">Internet</string>
    <string name="almanac_data">Almanac data</string>
    <string name="alt_unit_ft">Foot</string>
    <string name="altitude">Altitude</string>
    <string name="android_version">Android version</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apk_loading">Getting the installation package…</string>
    <string name="app_name">Signal Detector</string>
    <string name="app_name_vip">Signal Detector Pro</string>
    <string name="app_not_found">App isn\'t installed.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="argcn_cell_info">16–bit GSM Absolute RF Channel Number</string>
    <string name="asu_gsm_level_cell_info">RSSI in ASU， Asu is calculated based on 3GPP RSSI.</string>
    <string name="asu_level_cell_info">1xRTT Level in Android ASU {1,2,4,8,16,99}.</string>
    <string name="asu_lte_nr_level_cell_info">RSRP in ASU，Asu is calculated based on 3GPP RSRP.</string>
    <string name="asu_tdscdma_wcdma_level_cell_info">RSCP in ASU， Asu is calculated based on 3GPP RSRP.</string>
    <string name="auto_get">Automatic acquisition</string>
    <string name="auto_mode">Automatic</string>
    <string name="avage_delay">Avg Delay</string>
    <string name="average">Average</string>
    <string name="band">Frequency band</string>
    <string name="band_width_cell_info">Cell bandwidth in kHz</string>
    <string name="bands_cell_info">Cell reference frequency band</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="base_app_get_info_failed">Sorry, failed to retrieve application information</string>
    <string name="base_close">Close</string>
    <string name="base_end">Finish</string>
    <string name="base_open">Open</string>
    <string name="base_reload">Reload</string>
    <string name="base_start">Start</string>
    <string name="bright_screen">Keep the screen visible</string>
    <string name="default_value">--</string>
    <string name="defensive_strategy_1">1. How to detect WLAN squatting</string>
    <string name="defensive_strategy_2">2. How to protect your network from WLAN squatting</string>
    <string name="defensive_strategy_2_1">(1) Set MAC addresses allowed on your router</string>
    <string name="defensive_strategy_2_2">(2) Disable SSID broadcast for your router</string>
    <string name="defensive_strategy_2_3">(3) Disable DHCP on your router</string>
    <string name="defensive_strategy_2_4">(4) Other methods</string>
    <string name="defensive_strategy_title">WLAN squatting prevention</string>
    <string name="digital_localization">Digital localization</string>
    <string name="evaluate">Ratings</string>
    <string name="frequency">Frequency</string>
    <string name="language">Language</string>
    <string name="please_enter_corrected_words">Please enter the corrected word</string>
    <string name="please_enter_wrong_words">Please enter the wrong word</string>
    <string name="privacy_agreement">User Agreement</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="privacy_statement">Privacy Policy</string>
    <string name="real_time_data">Real–time data</string>
    <string name="record_info">Filing information</string>
    <string name="satellite_list_title">Satellite list</string>
    <string name="satellite_noise">Carrier Ratio</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share</string>
    <string name="string_azimuth">Azimuth</string>
    <string name="string_country">Country/Region</string>
    <string name="string_delete">Delete</string>
    <string name="string_elevation">Elevation</string>
    <string name="string_suggest">Problems &amp; Suggestions</string>
    <string name="string_tip">Notify</string>
    <string name="string_unit">Units</string>
    <string name="string_used">Using</string>
    <string name="ui_mode">Display mode</string>
    <string name="wifi_strategy_1_1">In order to provide better router services, we recommend the following operations for you to easily control your home router: First, enter the router management interface. The login IP address and account information are printed on the label on the back of the router; Second, after successful login, Click [DHCP Server]–[Client List] in sequence, and all devices connected to the router will be displayed. At this time, you can check the connected device information. If there are redundant devices, it means that the network is blocked. In addition, there is another way to use security software or the mobile APP that comes with the router to detect network interference on the current device. You can use the [wifi signal]–[WLAN squatting] tool to check the device connection status of the router WiFi.</string>
    <string name="wifi_strategy_2_1">If your daily access router equipment is relatively fixed, you can directly use MAC address binding to completely solve the problem of network rubbing. MAC address binding is to bind the MAC address of your commonly used Internet devices (such as laptop, mobile phone or tablet) with the router. The router only allows the bound devices to access, while the unbound devices can\'t access the Internet even if they break the wireless password or connect directly to the router. 1010So, how is the MAC address bound to the router?1010Step 1: enter the router setting interface and find the MAC address filtering or MAC address binding options in [advanced settings] – [network parameters] (the setting interfaces of routers of different brands are different, but you can find them in the advanced setting options). 1010Step 1: enter the router setting interface and find the MAC address filtering or MAC address binding options in [advanced settings] – [network parameters] (the setting interfaces of routers of different brands are different, but you can find them in the advanced setting options). Step 2: if there is the [enable MAC filtering function] option, enable this function, select the devices in the Allow list to connect to the network, and add the MAC address of the devices to be connected to the list. 1010The third step is to restart the router after setting.</string>
    <string name="wifi_strategy_2_2_1">SSID is the wireless network\'s name. Disabling SSID broadcast hides the SSID so others are unable to search for or access the network.</string>
    <string name="wifi_strategy_2_3_1">DHCP stands for Dynamic Host Configuration Protocol. Based on DHCP, your router dynamically assigns an IP address (such as 192.168.0.108) to a device connected to the network. You need to manually assign an IP address after disabling DHCP on your router. A rare IP address helps improve the overall security of your wireless network as it prevents others from cracking your router or using the network even if a connection is established.</string>
    <string name="wifi_strategy_2_4_1">In addition to the above methods, there are some auxiliary methods, such as reducing the transmission power of the router without affecting the Internet experience; Modify the default management address of the wireless router; Modify the management user name and password of the router; Set the WiFi password type of the router to wap–psk / wpa2–psk, and enter a password of 8 ~ 63 characters. You can add some unpopular characters or case.</string>
    <string name="word_error_feedback">Word correction</string>
    <string name="wrong_words">Wrong word</string>
</resources>