<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/settings">
        <menu>
            <group
                android:menuCategory="container"
                android:checkableBehavior="none">
                <item
                    android:icon="@drawable/ic_dark_mode"
                    android:id="@+id/nav_mode"
                    android:title="@string/ui_mode"
                    app:actionLayout="@layout/menu_language"/>
                <item
                    android:icon="@drawable/ic_language"
                    android:id="@+id/nav_language"
                    android:title="@string/language"
                    app:actionLayout="@layout/menu_language"/>
                <item
                    android:icon="@drawable/ic_number_local"
                    android:id="@+id/nav_num_locale"
                    android:title="@string/digital_localization"
                    app:actionLayout="@layout/switch_layout_main"/>
                <item
                    android:icon="@drawable/ic_bright_screen"
                    android:id="@+id/nav_bright_screen"
                    android:visible="false"
                    android:title="@string/bright_screen"
                    app:actionLayout="@layout/switch_layout_main"/>
                <item
                    android:icon="@drawable/ic_version_vip"
                    android:id="@+id/nav_vip"
                    android:visible="false"
                    android:title="@string/ad_free"
                    app:actionLayout="@layout/menu_count_down_time"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/string_suggest">
        <menu>
            <group
                android:menuCategory="container"
                android:checkableBehavior="none">
                <item
                    android:icon="@drawable/ic_suggest"
                    android:id="@+id/nav_suggest"
                    android:title="@string/string_suggest"/>
                <item
                    android:icon="@drawable/ic_evaluate"
                    android:id="@+id/nav_evaluate"
                    android:title="@string/evaluate"/>
                <item
                    android:icon="@drawable/ic_share"
                    android:id="@+id/nav_share"
                    android:title="@string/share_app"/>
            </group>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_privacy_set"
        android:id="@+id/nav_privacy_settings"
        android:visible="false"
        android:title="@string/privacy_settings"/>
    <item
        android:icon="@drawable/ic_privacy"
        android:id="@+id/nav_privacy"
        android:title="@string/privacy_statement"/>
    <item
        android:icon="@drawable/ic_agreement2"
        android:id="@+id/nav_agreement"
        android:title="@string/privacy_agreement"/>
    <item
        android:icon="@drawable/ic_icp"
        android:id="@+id/nav_record"
        android:title="@string/record_info"/>
</menu>
