<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/divider"
    android:showDividers="middle">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite_list_title"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/satellite_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/real_time_data"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/sate_info_liner"
        android:background="@drawable/satellite_info_bg"
        android:padding="@dimen/dp_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_ver"
        android:showDividers="middle"
        app:layout_constraintTop_toBottomOf="@+id/satellite_info_title">
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_country"
            android:lines="1"
            android:layout_weight="0.7"
            android:tooltipText="@string/string_country"/>
        <TextView
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:id="@+id/tip_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Svid"
            android:layout_weight="0.7"/>
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_azimuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_azimuth"
            android:lines="1"
            android:layout_weight="1"
            android:tooltipText="@string/string_azimuth"/>
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_elevation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_elevation"
            android:lines="1"
            android:layout_weight="1"
            android:tooltipText="@string/string_elevation"/>
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_carrierFrequencyHz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            android:lines="1"
            android:layout_weight="1"
            android:tooltipText="@string/frequency"/>
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_used"
            android:lines="1"
            android:layout_weight="0.7"
            android:tooltipText="@string/string_used"/>
        <TextView
            android:textSize="12sp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/tip_signal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/satellite_noise"
            android:lines="1"
            android:layout_weight="1"
            android:tooltipText="@string/satellite_noise"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/satellite_list_recycler"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <com.google.android.material.button.MaterialButton
        android:gravity="center"
        android:id="@+id/satellite_list_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</LinearLayout>
