<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:divider="@drawable/divider"
    app:dividerPadding="@dimen/dp_10"
    app:showDividers="middle">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_error_feedback"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:id="@+id/input_layout"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wrong_words"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_wrong_words"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_error_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/after_correction"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_enter_corrected_words"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_corrected_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_ver"
        android:showDividers="middle"
        android:dividerPadding="@dimen/dp_10">
        <com.google.android.material.button.MaterialButton
            android:textSize="14sp"
            android:textColor="@color/cancel_color"
            android:gravity="center"
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:textSize="14sp"
            android:textColor="@color/design_default_color_primary"
            android:gravity="center"
            android:id="@+id/dialog_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sub"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
