<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:dividerPadding="@dimen/dp_10">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_gravity="center_horizontal"
        android:id="@+id/altitude_title"
        android:padding="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="center"
            android:id="@+id/alt_val"
            android:padding="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_value"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_gravity="center_horizontal"
            android:id="@+id/alt_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="ft"
            android:textOff="m"
            android:text="@string/string_unit"
            app:showText="true"
            app:switchPadding="@dimen/dp_10"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider="@drawable/divider_ver"
        app:dividerPadding="@dimen/dp_10"
        app:showDividers="middle">
        <com.google.android.material.button.MaterialButton
            android:textSize="14sp"
            android:textColor="@color/cancel_color"
            android:gravity="center"
            android:id="@+id/negative_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:textSize="14sp"
            android:gravity="center"
            android:id="@+id/positive_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>
