<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:divider="@drawable/divider"
    app:dividerPadding="@dimen/dp_10"
    app:showDividers="middle">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/dialog_title"
        android:padding="@dimen/dp_14"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tip"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/suggest_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dp_10"
        android:layout_weight="1"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider="@drawable/divider_ver"
        app:dividerPadding="@dimen/dp_10"
        app:showDividers="middle">
        <com.google.android.material.button.MaterialButton
            android:textColor="#ffff4444"
            android:gravity="center"
            android:id="@+id/dialog_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_delete"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <com.google.android.material.button.MaterialButton
            android:gravity="center"
            android:id="@+id/dialog_replace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_change"
            android:singleLine="true"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.button.MaterialButton
        android:textColor="@color/cancel_color"
        android:gravity="center"
        android:id="@+id/dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:singleLine="true"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</androidx.appcompat.widget.LinearLayoutCompat>
